configs/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gw-v2
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
